# mastro-mines

./: CMakeLists.txt  main.cpp
src/: Box.cpp  Box.h  Coordinates.cpp  Coordinates.h  Field.cpp  Field.h  GameInterface.cpp  GameInterface.h  Player.cpp  Player.h
src/CLI/: CommandLineInterface.cpp  CommandLineInterface.h
src/GUI/: GraphicUserInterface.cpp  GraphicUserInterface.h
